# myrender

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
image/: lesson3-fail.tga  lesson3-success.tga  lesson3-tex.tga
include/: my_gl.h  tgaimage.h
include/utils/: model.h  triangle.h  vectors.h
src/: main.cpp  my_gl.cpp  tgaimage.cpp
src/utils/: model.cpp  triangle.cpp  vectors.cpp
